<resources>
    <string name="app_name">Tracksphere</string>
    <string name="title_home">Home</string>
    <string name="title_trace">Trace</string>
    <string name="title_planner">Planner</string>
    <string name="title_more">More</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="running">Running</string>
    <string name="idle">Idle</string>
    <string name="stopped">Stopped</string>
    <string name="halt">Halt</string>
    <string name="offline">Offline</string>
    <string name="search_vehicle_here">Search vehicle here</string>
    <string name="filter_button_description">filter button description</string>
    <string name="go_back_to_previous_screen">Go back to previous screen</string>
    <string name="todo">TODO</string>
    <string name="standard_charger_voltage">12.5 V</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ltrs">Ltrs</string>
    <string name="diesel">Diesel</string>
    <string name="adblue">Adblue</string>
    <string name="major_issue">Major Issue</string>
    <string name="_9999">9999</string>
    <string name="location">Location:</string>
    <string name="tracelist">TraceList</string>
    <string name="need_help">Need Help?</string>
    <string name="details">Details</string>
</resources>