<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vecs.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_trace"
        android:name="com.vecs.ui.trace.TraceFragment"
        android:label="@string/title_trace"
        tools:layout="@layout/fragment_trace" />

    <fragment
        android:id="@+id/navigation_planner"
        android:name="com.vecs.ui.planner.PlannerFragment"
        android:label="@string/title_planner"
        tools:layout="@layout/fragment_planner" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.vecs.ui.more.MoreFragment"
        android:label="@string/title_planner"
        tools:layout="@layout/fragment_more" />
</navigation>