<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/vehicle_summary_header_height"
    android:background="@drawable/drawable_rounded_corner_with_white_bg"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/running_vehicle_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/running_vehicle_count_color"
            android:textSize="@dimen/vehicle_count_text_size"
            android:textStyle="bold"
            android:text="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/running"
            android:textColor="@color/main_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idle_vehicle_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/idle_vehicle_count_color"
            android:textSize="@dimen/vehicle_count_text_size"
            android:textStyle="bold"
            android:text="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/idle"
            android:textColor="@color/main_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stopped_vehicle_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/stopped_vehicle_count_color"
            android:textSize="@dimen/vehicle_count_text_size"
            android:textStyle="bold"
            android:text="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/stopped"
            android:textColor="@color/main_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/offline_vehicle_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/offline_vehicle_count_color"
            android:textSize="@dimen/vehicle_count_text_size"
            android:textStyle="bold"
            android:text="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/offline"
            android:textColor="@color/main_light" />
    </LinearLayout>
</LinearLayout>