<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar_diesel"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/circular_progress_bar_width"
            android:layout_height="@dimen/circular_progress_bar_width"
            android:background="@drawable/drawable_circular_shape"
            android:indeterminate="false"
            android:max="100"
            android:progress="30"
            android:progressDrawable="@drawable/drawable_circular_progress_bar_diesel" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/progressText_diesel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="20/90"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ltrs"
                android:textColor="@color/main_light"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/margin_big"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/diesel"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar_adblue"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/circular_progress_bar_width"
            android:layout_height="@dimen/circular_progress_bar_width"
            android:background="@drawable/drawable_circular_shape"
            android:indeterminate="false"
            android:max="100"
            android:progress="60"
            android:progressDrawable="@drawable/drawable_circular_progress_bar_adblue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/progressText_adblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="20/90"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ltrs"
                android:textColor="@color/main_light"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/margin_big"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/adblue"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </FrameLayout>
</LinearLayout>
