<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_very_big"
    android:layout_marginVertical="@dimen/margin_normal"
    android:background="@drawable/drawable_rounded_corner_with_white_bg_and_purple_border"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:src="@drawable/major_issue" />

    <View
        android:id="@+id/vehicle_status_indicator"
        android:layout_width="@dimen/list_item_vehicle_status_indicator_width"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_rounded_corner_with_running_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vehicle_id_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/list_item_vehicle_id_primary_text_size"
                    android:textStyle="bold"
                    tools:text="KA02HG1547" />

                <TextView
                    android:id="@+id/vehicle_id_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_light"
                    android:textSize="@dimen/list_item_vehicle_id_secondary_text_size"
                    tools:text="MAT788052P7C06674" />


            </LinearLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/adblue_fuel_quantity_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_adblue_blue_quantity" />

                <ImageView
                    android:id="@+id/diesel_quantity_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_green_fuel_quantity" />

                <ImageView
                    android:id="@+id/charger_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_charger" />

                <TextView
                    android:id="@+id/charger_voltage_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/standard_charger_voltage"
                    android:textColor="@color/running_vehicle_count_color"
                    android:textSize="@dimen/list_item_status_secondary_text_size" />

            </GridLayout>

            <LinearLayout
                android:id="@+id/status_text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:background="@drawable/drawable_rounded_corner_with_running_color"
                android:gravity="center"
                android:minWidth="@dimen/min_width_status_text"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status_text_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/list_item_vehicle_id_secondary_text_size"
                    android:textStyle="bold"
                    tools:text="Running" />

                <TextView
                    android:id="@+id/status_text_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/list_item_status_secondary_text_size"
                    tools:text="20Kmph" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                android:id="@+id/circular_progress_layout"
                layout="@layout/layout_circular_progress_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_swap_driving_apps_wheel"
                    android:text="@string/_9999"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_hourglass"
                    android:text="@string/_9999"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/milage_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_speed"
                    android:text="12kmpl"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_normal"
            android:layout_marginHorizontal="@dimen/margin_big"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/margin_small"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/margin_small">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/main_light" />

                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@android:color/holo_blue_dark" />
                </LinearLayout>

                <TextView
                    android:id="@+id/lastupdated_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="Last Updated: 12:30"
                    android:textColor="@color/main_light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/need_help_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textAlignment="center"
                    android:text="@string/need_help"
                    android:textColor="@color/trace_details_border_color"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/details_button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/details"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <include
            android:id="@+id/additional_details"
            layout="@layout/layout_additional_trace_details"
            android:layout_marginHorizontal="@dimen/margin_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>